fix: align tab

--- a/src/Components/Tab/Tab.css
+++ b/src/Components/Tab/Tab.css
@@ -75,5 +75,5 @@
 
 .admin-panel {
   padding: 20px;
-  text-align: center;
+  text-align: left;
 }
